<resources>
    <string name="app_name">weG</string>
    <string name="first_tab">Home</string>
    <string name="second_tab">Ground</string>
    <string name="third_tab">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_exist">"already_exist"</string>

    <string name="kakao_app_key">5b6443a2f896a5b82b2196440ddf6df4</string>
    <string name="kakao_app_key2">kakao5b6443a2f896a5b82b2196440ddf6df4</string>
</resources>