<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_first">
    <fragment
        android:id="@+id/navigation_first"
        android:name="com.example.weg.ui.home.HomeFragment"
        android:label="@string/first_tab"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_second"
        android:name="com.example.weg.ui.ground.GroundFragment"
        android:label="@string/second_tab"
        tools:layout="@layout/fragment_ground" />

    <fragment
        android:id="@+id/navigation_third"
        android:name="com.example.weg.ui.profile.ProfileFragment"
        android:label="@string/third_tab"
        tools:layout="@layout/fragment_profile" />
</navigation>